One page and one step checkout

--- a/src/Presentation/Nop.Web/Views/Checkout/OpcPaymentMethods.cshtml
+++ b/src/Presentation/Nop.Web/Views/Checkout/OpcPaymentMethods.cshtml
@@ -46,7 +46,7 @@
                                 </div>
                             }
                             <div class="payment-details">
-                                <input id="paymentmethod_@(i)" type="radio" name="paymentmethod" value="@(paymentMethod.PaymentMethodSystemName)" checked="@paymentMethod.Selected" />
+                                <input id="paymentmethod_@(i)" type="radio" name="paymentmethod" value="@(paymentMethod.PaymentMethodSystemName)" checked="@paymentMethod.Selected" onclick="PaymentMethod.save();" />
                                 <label for="paymentmethod_@(i)">@paymentMethodName</label>
                                 @if (!string.IsNullOrEmpty(paymentMethod.Description))
                                 {
